tests/paczka1/fuzzy1/95430029.err
Error in line 2: ssLH S317 88,2
Error in line 9: hMAiSTVAC A625 31,1
Error in line 19: A667 S317 49,4
Error in line 14: btAF4S S724 96,2
Error in line 11: hMAiSTVAC S317 79,9
Error in line 32: ssLH A625 307,6
Error in line 38: hMAiSTVAC S317 48,3
